@@ -120,6 +120,9 @@ Tests
 - Issue #12820: add tests for the xml.dom.minicompat module.
   Patch by John Chandler and Phil Connell.
 
+- Issue #17779: test_osx_env now works with unittest test discovery.
+  Patch by Zachary Ware.
+
 - Issue #17766: test_iterlen now works with unittest test discovery.
   Patch by Zachary Ware.
 
